--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
   <!-- ====================navbar section start========================= -->
-  <nav class="navbar  fixed-top navbar-expand-lg ">
+  <nav class="navbar navbar-expand-lg ">
     <div class="container">
       <a class="navbar-brand text-white" href="#">Portfo<span class="text-danger">lio</span></a>
       <!-- data-bs- -->
